Update oraclecloud-certificates/src/main/java/io/micronaut/http/ssl/OracleCloudCertificateFetcher.java
Co-authored-by: Jonas Konrad <jonas.konrad@oracle.com>